--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+.app-main {
+  background: url("./assets/bg.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+}
+.loader {
+  background: url("./assets/bg.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.app-main .hero-text {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  font-size: 1.3rem;
+  padding: 20px 10px;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  margin-top: 2rem;
+}
+.app.cold {
+  background: url("./assets/cold.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.app.warm {
+  background: url("./assets/warm.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+main {
+  padding: 25px;
+  height: 300px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.75)
+  ); */
+}
+.search-box {
+  margin-top: 2rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.search-box .search-bar {
+  display: block;
+  width: 100%;
+  padding: 15px;
+
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+  color: #000000;
+  font-size: 20px;
+}
+.search-box .search-bar:focus {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+.display {
+  border-radius: 1rem;
+}
+.display .location {
+  color: #000000;
+  font-weight: 800;
+  font-size: 1.5rem;
+}
+.date {
+  color: #000000;
+  font-weight: 500;
+  font-size: 1.3rem;
+}
+.temp {
+  font-size: 3rem;
+  color: #fff;
+  letter-spacing: 1px;
+  font-weight: 900;
+}
+.weather {
+  color: #000000;
+  font-weight: 600;
+  font-size: 1.3rem;
 }
